tests/specs/npm/byonm_main_path_traversal/main_nested_escape.cjs
const sub = require("nested-pkg/evil-sub");
console.log("ERROR: should not have loaded:", JSON.stringify(sub));
